Fix typed bug that was cutting off one quote

--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -10,6 +10,12 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+ #intro-text-container {
+     min-height: 90px;
+     position: relative;
+     min-width: 1000px;
+ }
+
 body {
     width: 100%;
     height: 100%;
